--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curso  git  </title>
+    <title>Document</title>
 </head>
 <body>
-    <h1> aprendiendo  como  usar  git</h1>
-    <h2>como  clonar  repositorio</h2>
+    <header>
+        <h1>About me</h1>
+    </header>
+    <main>
+        <h2>Hi! Welcome to my page</h2>
+        <p>
+            <span>Rod</span>
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quo sint dolore velit quo, sequi aliquam repellandae vero soluta fuga dignissimos, natus, illo officiis! Officia eligendi a rem veritatis recusandae.
+        </p>
+    </main>
+    <footer>
+        <a href="https://twitter.com/freomr">Twitter</a>
+    </footer>
 </body>
 </html>
