Modified footer HTML

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     </header>
     <main>
         <h2>Hi! Welcome to my page</h2>
-        <p>
-            <span>Rod</span>
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quo sint dolore velit quo, sequi aliquam repellandae vero soluta fuga dignissimos, natus, illo officiis! Officia eligendi a rem veritatis recusandae.
-        </p>
+        <h3>I'm <span>Rod</span></h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quo sint dolore velit quos, sequi aliquam repudiandae vero soluta fuga dignissimos, natus, illo officiis! Officia eligendi a rem veritatis recusandae.</p>
     </main>
     <footer>
-        <a href="https://twitter.com/freomr">Twitter</a>
+        <ul>
+            <li><a href="https://twitter.com/fredy">Twitter</a></li>
+            <li><a href="hhttps://github.com/Fredom77">Github</a></li>
+        </ul>
     </footer>
 </body>
 </html>
