--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quo sint dolore velit quo, sequi aliquam repellandae vero soluta fuga dignissimos, natus, illo officiis! Officia eligendi a rem veritatis recusandae.
         </p>
+        <!-- Sección de Comida -->
+        <section>
+            <h3>Comida</h3>
+            <h4>Comida Mexicana</h4>
+            <img src="https://media.istockphoto.com/id/1413602407/es/foto/cena-de-tacos.jpg?s=1024x1024&w=is&k=20&c=Vmc7uWx4E8Ou7qLvE3r1zNafj8hY_QrIfCngb1vu5mk=" alt="Cena Mexicana">
+        </section>
     </main>
     <footer>
         <a href="https://twitter.com/freomr">Twitter</a>
